# enative

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEPENDENCIES.md  LICENSE  README.md  ROADMAP.md
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  config.yml
.github/workflows/: build.yml  check.yml  document.yml  test.yml
beacon/: Cargo.toml
beacon/src/: client.rs  lib.rs
benches/: wgpu.rs
core/: Cargo.toml  README.md
core/src/: animation.rs  border.rs  color.rs  element.rs  event.rs  font.rs  image.rs  input_method.rs  lib.rs  padding.rs  settings.rs  text.rs  theme.rs  widget.rs
core/src/keyboard/: event.rs  key.rs
core/src/mouse/: event.rs
core/src/renderer/: null.rs
core/src/text/: typography.rs
core/src/theme/: mod.rs  palette.rs
core/src/widget/: text.rs
debug/: Cargo.toml
debug/src/: lib.rs
devtools/: Cargo.toml
devtools/src/: comet.rs  lib.rs
docs/: README.md  architecture.md  async.md  getting-started.md  layout.md  redirect.html  release_summary.py  theming.md  widgets.md
examples/: README.md
examples/arc/: Cargo.toml  README.md
examples/arc/src/: main.rs
examples/bezier_tool/: Cargo.toml  README.md
examples/bezier_tool/src/: main.rs
examples/changelog/: Cargo.toml
examples/changelog/src/: changelog.rs  icon.rs  main.rs
examples/checkbox/: Cargo.toml
examples/checkbox/src/: main.rs
examples/clock/: Cargo.toml
examples/clock/src/: main.rs
examples/color_palette/: Cargo.toml
examples/color_palette/src/: main.rs
examples/combo_box/: Cargo.toml
examples/combo_box/src/: main.rs
examples/counter/: Cargo.toml  README.md  index.html
examples/counter/src/: main.rs
examples/custom_quad/: Cargo.toml
examples/custom_quad/src/: main.rs
examples/custom_shader/: Cargo.toml
examples/custom_shader/src/: main.rs  scene.rs
examples/custom_shader/src/scene/: camera.rs  pipeline.rs
examples/custom_shader/src/scene/pipeline/: uniforms.rs
examples/custom_widget/: Cargo.toml  README.md
examples/custom_widget/src/: main.rs
examples/delineate/: Cargo.toml
examples/delineate/src/: main.rs
examples/download_progress/: Cargo.toml  README.md  index.html
examples/download_progress/src/: download.rs  main.rs
examples/editor/: Cargo.toml
examples/editor/src/: main.rs
examples/events/: Cargo.toml
examples/events/src/: main.rs
examples/exit/: Cargo.toml
examples/exit/src/: main.rs
examples/ferris/: Cargo.toml
examples/ferris/src/: main.rs
examples/gallery/: Cargo.toml
examples/gallery/src/: main.rs
examples/game_of_life/: Cargo.toml  README.md
examples/game_of_life/src/: main.rs
examples/geometry/: Cargo.toml  README.md
examples/gradient/: Cargo.toml
examples/integration/: Cargo.toml  README.md
examples/layout/: Cargo.toml
examples/lazy/: Cargo.toml
examples/loading_spinners/: Cargo.toml
examples/loupe/: Cargo.toml
examples/markdown/: Cargo.toml  build.rs  overview.md
examples/modal/: Cargo.toml
examples/multi_window/: Cargo.toml
examples/multitouch/: Cargo.toml
examples/pane_grid/: Cargo.toml  README.md
examples/pick_list/: Cargo.toml
examples/pokedex/: Cargo.toml  README.md
examples/progress_bar/: Cargo.toml  README.md
examples/qr_code/: Cargo.toml  README.md
examples/sandpiles/: Cargo.toml
examples/screenshot/: Cargo.toml
examples/screenshot/src/: main.rs
examples/scrollable/: Cargo.toml
examples/sierpinski_triangle/: Cargo.toml  README.md
examples/slider/: Cargo.toml
examples/solar_system/: Cargo.toml  README.md
examples/stopwatch/: Cargo.toml  README.md
examples/styling/: Cargo.toml  README.md
examples/svg/: Cargo.toml
examples/system_information/: Cargo.toml
examples/table/: Cargo.toml
examples/text/: Cargo.toml
examples/the_matrix/: Cargo.toml
examples/toast/: Cargo.toml
examples/todos/: Cargo.toml  README.md  iced-todos.desktop  index.html
examples/todos/src/: main.rs
examples/tooltip/: Cargo.toml
examples/tour/: Cargo.toml  README.md  index.html
examples/url_handler/: Cargo.toml
examples/vectorial_text/: Cargo.toml
examples/websocket/: Cargo.toml
examples/websocket/src/: echo.rs  main.rs
examples/websocket/src/echo/: server.rs
futures/: Cargo.toml
futures/src/: backend.rs  lib.rs  subscription.rs
graphics/: Cargo.toml
graphics/src/: compositor.rs  lib.rs  text.rs
highlighter/: Cargo.toml
highlighter/src/: lib.rs
layershell/: Cargo.toml
layershell/src/: actions.rs  application.rs  clipboard.rs  conversion.rs  error.rs  event.rs  lib.rs  proxy.rs  settings.rs
layershell/src/application/: state.rs
layershell/src/conversion/: keymap.rs
program/: Cargo.toml
program/src/: lib.rs
renderer/: Cargo.toml
renderer/src/: fallback.rs  lib.rs
runtime/: Cargo.toml  README.md
runtime/src/: keyboard.rs  lib.rs  task.rs  user_interface.rs  window.rs
runtime/src/widget/: selector.rs
selector/: Cargo.toml
selector/src/: lib.rs
src/: application.rs  daemon.rs  error.rs  layershell.rs  lib.rs  native_view.rs  time.rs
src/application/: timed.rs
test/: Cargo.toml
test/src/: emulator.rs  ice.rs  lib.rs  simulator.rs
tester/: Cargo.toml
tester/src/: icon.rs  lib.rs
tiny_skia/: Cargo.toml
tiny_skia/src/: engine.rs  geometry.rs  lib.rs
wgpu/: Cargo.toml  README.md
wgpu/src/: color.rs  lib.rs  quad.rs  triangle.rs
wgpu/src/image/: atlas.rs  mod.rs
wgpu/src/quad/: gradient.rs  solid.rs
wgpu/src/triangle/: msaa.rs
wgpu/src/window/: compositor.rs
widget/: Cargo.toml
widget/src/: button.rs  canvas.rs  checkbox.rs  column.rs  combo_box.rs  container.rs  helpers.rs  image.rs  keyed.rs  lib.rs  markdown.rs  native_view.rs  pane_grid.rs  pick_list.rs  pin.rs  progress_bar.rs  qr_code.rs  radio.rs  row.rs  rule.rs  scrollable.rs  shader.rs  slider.rs  svg.rs  text.rs  text_editor.rs  text_input.rs  themer.rs  toggler.rs  tooltip.rs  vertical_slider.rs
widget/src/keyed/: column.rs
widget/src/lazy/: component.rs
winit/: Cargo.toml  README.md
winit/src/: conversion.rs  lib.rs
(+43 files in other folders)
