[package]
name = "enative"
description = "A cross-platform GUI engine for the EcoWestern Ecosystem"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["wgpu", "tiny-skia", "crisp", "hinting", "web-colors", "tokio", "linux-theme-detection", "x11", "wayland"]
# Enables the `wgpu` GPU-accelerated renderer with all its default features (Vulkan, Metal, DX12, OpenGL, and WebGPU)
wgpu = ["wgpu-bare", "enative_renderer/wgpu"]
# Enables the `wgpu` GPU-accelerated renderer with the minimum required features (no backends!)
wgpu-bare = ["enative_renderer/wgpu-bare", "enative_widget/wgpu"]
# Enables the `tiny-skia` software renderer
tiny-skia = ["enative_renderer/tiny-skia"]
# Enables the `image` widget and image clipboard support
image = ["image-without-codecs", "image/default", "enative_winit/image"]
# Enables the `image` widget, without any built-in codecs of the `image` crate
image-without-codecs = ["enative_widget/image", "dep:image"]
# Enables the `svg` widget
svg = ["enative_widget/svg"]
# Enables the `canvas` widget
canvas = ["enative_widget/canvas"]
# Enables the `qr_code` widget
qr_code = ["enative_widget/qr_code"]
# Enables the `markdown` widget
markdown = ["enative_widget/markdown"]
# Enables lazy widgets
lazy = ["enative_widget/lazy"]
# Enables debug metrics in native platforms (press F12)
debug = ["enative_winit/debug", "dep:enative_devtools"]
# Enables time-travel debugging (very experimental!)
time-travel = ["debug", "enative_devtools/time-travel"]
# Enables hot reloading (very experimental!)
hot = ["debug", "enative_debug/hot"]
# Enables the tester developer tool for recording and playing tests (press F12)
tester = ["dep:enative_tester"]
# Enables the `thread-pool` futures executor as the `executor::Default` on native platforms
thread-pool = ["enative_futures/thread-pool"]
# Enables `tokio` as the `executor::Default` on native platforms
tokio = ["enative_futures/tokio"]
# Enables `smol` as the `executor::Default` on native platforms
smol = ["enative_futures/smol"]
# Enables querying system information
sysinfo = ["enative_winit/sysinfo"]
# Enables broken "sRGB linear" blending to reproduce color management of the Web
web-colors = ["enative_renderer/web-colors"]
# Enables pixel snapping for crisp edges by default (can cause jitter!)
crisp = ["enative_core/crisp"]
# Enables the WebGL backend
webgl = ["enative_renderer/webgl"]
# Enables syntax highlighting
highlighter = ["enative_highlighter", "enative_widget/highlighter"]
# Enables the `widget::selector` module
selector = ["enative_runtime/selector"]
# Enables the advanced module
advanced = ["enative_core/advanced", "enative_widget/advanced"]
# Embeds Fira Sans into the final application; useful for testing and Wasm builds
fira-sans = ["enative_renderer/fira-sans"]
# Enables basic text shaping by default
basic-shaping = ["enative_core/basic-shaping"]
# Enables advanced text shaping by default
advanced-shaping = ["enative_core/advanced-shaping"]
# Enables rendering hints (e.g. metrics hinting)
hinting = ["enative_winit/hinting"]
# Enables strict assertions for debugging purposes at the expense of performance
strict-assertions = ["enative_renderer/strict-assertions"]
# Redraws on every runtime event, and not only when a widget requests it
unconditional-rendering = ["enative_winit/unconditional-rendering"]
# Enables support for the `sipper` library
sipper = ["enative_runtime/sipper"]
# Enables Linux system theme detection
linux-theme-detection = ["enative_winit/linux-theme-detection"]
# Enables the Unix X11 backend
x11 = ["enative_renderer/x11", "enative_winit/x11"]
# Enables the Unix Wayland backend
wayland = ["enative_renderer/wayland", "enative_winit/wayland"]

[dependencies]
enative_debug.workspace = true
enative_core.workspace = true
enative_futures.workspace = true
enative_renderer.workspace = true
enative_runtime.workspace = true
enative_widget.workspace = true
enative_winit.workspace = true
wayland-client.workspace = true
wayland-protocols.workspace = true
enative_layershell.workspace = true




enative_devtools.workspace = true
enative_devtools.optional = true

enative_tester.workspace = true
enative_tester.optional = true

enative_highlighter.workspace = true
enative_highlighter.optional = true

thiserror.workspace = true

image.workspace = true
image.optional = true

[dev-dependencies]
criterion = "0.5"
enative_wgpu.workspace = true

[[bench]]
name = "wgpu"
harness = false
required-features = ["canvas"]

[profile.release-opt]
inherits = "release"
codegen-units = 1
debug = false
lto = true
incremental = false
opt-level = 3
overflow-checks = false
strip = "debuginfo"

[workspace]
members = [
    "beacon",
    "core",
    "debug",
    "devtools",
    "futures",
    "graphics",
    "highlighter",
    "layershell",
    "program",
    "renderer",
    "runtime",
    "selector",
    "test",
    "tester",
    "tiny_skia",
    "wgpu",
    "widget",
    "winit",
    "examples/*",
]

[workspace.package]
version = "0.15.0-dev"
authors = ["EcoWestern Team", "eNative Contributors"]
edition = "2024"
license = "MIT"
repository = "https://github.com/ecowestern/enative"
homepage = "https://ecowestern.net"
categories = ["gui"]
keywords = ["gui", "ui", "graphics", "interface", "widgets"]
rust-version = "1.92"

[workspace.dependencies]
enative = { version = "0.15.0-dev", path = "." }
enative_beacon = { version = "0.15.0-dev", path = "beacon" }
enative_core = { version = "0.15.0-dev", path = "core" }
enative_debug = { version = "0.15.0-dev", path = "debug" }
enative_devtools = { version = "0.15.0-dev", path = "devtools" }
enative_futures = { version = "0.15.0-dev", path = "futures" }
enative_graphics = { version = "0.15.0-dev", path = "graphics" }
enative_highlighter = { version = "0.15.0-dev", path = "highlighter" }
enative_program = { version = "0.15.0-dev", path = "program" }
enative_renderer = { version = "0.15.0-dev", path = "renderer" }
enative_runtime = { version = "0.15.0-dev", path = "runtime" }
enative_selector = { version = "0.15.0-dev", path = "selector" }
enative_test = { version = "0.15.0-dev", path = "test" }
enative_tester = { version = "0.15.0-dev", path = "tester" }
enative_tiny_skia = { version = "0.15.0-dev", path = "tiny_skia", default-features = false }
enative_wgpu = { version = "0.15.0-dev", path = "wgpu", default-features = false }
enative_widget = { version = "0.15.0-dev", path = "widget" }
enative_winit = { version = "0.15.0-dev", path = "winit", default-features = false }
enative_layershell = { version = "0.15.0-dev", path = "layershell" }

arboard = { version = "3.6", default-features = false }
bincode = "1.3"
bitflags = "2.0"
bytemuck = { version = "1.0", features = ["derive"] }
bytes = "1.6"
cargo-hot = { version = "0.1", package = "cargo-hot-protocol" }
cosmic-text = "0.18"
cryoglyph = { git = "https://github.com/iced-rs/cryoglyph.git", rev = "1d68895e9c4c9b73739f826e81c2e3012c155cce" }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
glam = "0.25"
guillotiere = "0.6"
half = "2.2"
image = { version = "0.25", default-features = false }
kamadak-exif = "0.6"
kurbo = "0.10"
lilt = "0.8"
log = "0.4"
lyon = "1.0"
lyon_path = "1.0"
mundy = { version = "0.2", default-features = false }
nom = "8"
num-traits = "0.2"
ouroboros = "0.18"
png = "0.18"
pulldown-cmark = "0.12"
qrcode = { version = "0.13", default-features = false }
raw-window-handle = "0.6"
resvg = "0.45"
rfd = "0.16"
rustc-hash = "2.0"
semver = "1.0"
serde = "1.0"
sha2 = "0.10"
sipper = "0.1"
smol = "2"
smol_str = "0.2"
softbuffer = { version = "0.4", default-features = false }
sysinfo = "0.33"
thiserror = "2"
tiny-skia = { version = "0.11", default-features = false, features = ["std", "simd"] }
tokio = "1.0"
tracing = "0.1"
two-face = { version = "0.4", default-features = false, features = ["syntect-default-fancy"] }
unicode-segmentation = "1.0"
url = "2.5"
wasm-bindgen-futures = "0.4"
wasmtimer = "0.4.2"
web-sys = "=0.3.85"
web-time = "1.1"
wgpu = { version = "28.0", default-features = false, features = ["std", "wgsl"] }
winit = { git = "https://github.com/iced-rs/winit.git", rev = "05b8ff17a06562f0a10bb46e6eaacbe2a95cb5ed", default-features = false, features = ["rwh_06"] }
wayland-client = "0.31"
wayland-protocols = "0.31"

[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
missing_docs = "deny"
unsafe_code = "deny"
unused_results = "deny"

[workspace.lints.clippy]
type-complexity = "allow"
map-entry = "allow"
large-enum-variant = "allow"
result_large_err = "allow"
semicolon_if_nothing_returned = "deny"
trivially-copy-pass-by-ref = "deny"
default_trait_access = "deny"
match-wildcard-for-single-variants = "deny"
redundant-closure-for-method-calls = "deny"
filter_map_next = "deny"
manual_let_else = "deny"
unused_async = "deny"
from_over_into = "deny"
needless_borrow = "deny"
new_without_default = "deny"
useless_conversion = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "forbid"
