[package]
name = "enative_devtools"
description = "Attachable developer tools for any enative program"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
time-travel = ["enative_program/time-travel"]

[dependencies]
enative_debug.workspace = true
enative_widget.workspace = true
log.workspace = true

enative_program.workspace = true
enative_program.features = ["debug"]
