[package]
name = "enative_highlighter"
description = "A syntax highlighter for enative"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
enative_core.workspace = true

two-face.workspace = true
