[package]
name = "enative_renderer"
description = "The official renderer for enative"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[features]
wgpu = ["enative_wgpu/default"]
wgpu-bare = ["enative_wgpu"]
tiny-skia = ["enative_tiny_skia"]
image = ["enative_tiny_skia?/image", "enative_wgpu?/image"]
svg = ["enative_tiny_skia?/svg", "enative_wgpu?/svg"]
geometry = ["enative_graphics/geometry", "enative_tiny_skia?/geometry", "enative_wgpu?/geometry"]
web-colors = ["enative_wgpu?/web-colors"]
webgl = ["enative_wgpu?/webgl"]
fira-sans = ["enative_graphics/fira-sans"]
strict-assertions = ["enative_wgpu?/strict-assertions"]
x11 = ["enative_tiny_skia?/x11"]
wayland = ["enative_tiny_skia?/wayland"]

[dependencies]
enative_graphics.workspace = true

enative_tiny_skia.workspace = true
enative_tiny_skia.optional = true

enative_wgpu.workspace = true
enative_wgpu.optional = true

log.workspace = true
thiserror.workspace = true
