[package]
name = "enative_runtime"
description = "A renderer-agnostic runtime for enative"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
selector = ["dep:enative_selector"]
image = ["enative_core/image"]

[lints]
workspace = true

[dependencies]
bytes.workspace = true
enative_core.workspace = true
enative_futures.workspace = true

raw-window-handle.workspace = true
thiserror.workspace = true

sipper.workspace = true
sipper.optional = true

enative_selector.workspace = true
enative_selector.optional = true
