[package]
name = "enative_test"
description = "A library for testing enative applications in headless mode"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
enative_runtime.workspace = true
enative_program.workspace = true
enative_selector.workspace = true

enative_futures.workspace = true
enative_futures.features = ["thread-pool"]

enative_renderer.workspace = true
enative_renderer.features = ["fira-sans"]

nom.workspace = true
png.workspace = true
sha2.workspace = true
thiserror.workspace = true
