[package]
name = "enative_tester"
description = "A test recorder, editor, and runner for your enative applications"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
enative_test.workspace = true
enative_widget.workspace = true
log.workspace = true
rfd.workspace = true

[lints]
workspace = true
