[package]
name = "enative_wgpu"
description = "A renderer for enative on top of wgpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
default = ["wgpu/default"]
geometry = ["enative_graphics/geometry", "lyon"]
image = ["enative_graphics/image"]
svg = ["enative_graphics/svg", "resvg/text"]
web-colors = ["enative_graphics/web-colors"]
webgl = ["wgpu/webgl"]
strict-assertions = []

[dependencies]
enative_debug.workspace = true
enative_graphics.workspace = true

bitflags.workspace = true
bytemuck.workspace = true
futures.workspace = true
glam.workspace = true
cryoglyph.workspace = true
guillotiere.workspace = true
log.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true
wgpu.workspace = true

lyon.workspace = true
lyon.optional = true

resvg.workspace = true
resvg.optional = true
