[package]
name = "enative_widget"
description = "The built-in widgets for enative"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
lazy = ["ouroboros"]
image = ["enative_renderer/image"]
svg = ["enative_renderer/svg"]
canvas = ["enative_renderer/geometry"]
qr_code = ["canvas", "dep:qrcode"]
wgpu = ["enative_renderer/wgpu-bare"]
markdown = ["dep:pulldown-cmark"]
highlighter = ["dep:enative_highlighter"]
advanced = []

[dependencies]
enative_renderer.workspace = true

num-traits.workspace = true
log.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true
unicode-segmentation.workspace = true

ouroboros.workspace = true
ouroboros.optional = true

qrcode.workspace = true
qrcode.optional = true

pulldown-cmark.workspace = true
pulldown-cmark.optional = true

enative_highlighter.workspace = true
enative_highlighter.optional = true
