[package]
name = "counter"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2024"
publish = false

[dependencies]
enative.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
enative.workspace = true
enative.features = ["webgl", "fira-sans"]

[dev-dependencies]
enative_test.workspace = true
