[package]
name = "screenshot"
version = "0.1.0"
authors = ["Bingus <shankern@protonmail.com>"]
edition = "2024"
publish = false

[dependencies]
enative.workspace = true
enative.features = ["debug", "image", "advanced", "tokio"]

image.workspace = true
image.features = ["png"]

tokio.workspace = true

tracing-subscriber = "0.3"