[package]
name = "todos"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2024"
publish = false

[features]
tester = ["enative/tester"]

[dependencies]
enative.workspace = true
enative.features = ["tokio", "debug", "time-travel"]

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "fast-rng", "serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
tokio.features = ["fs", "time"]
directories = "6.0"
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
enative.workspace = true
enative.features = ["debug", "webgl", "fira-sans"]

uuid = { version = "1.0", features = ["js"] }
web-sys = { workspace = true, features = ["Window", "Storage"] }
wasmtimer.workspace = true

[dev-dependencies]
enative_test.workspace = true

[package.metadata.deb]
assets = [
    ["target/release-opt/todos", "usr/bin/enative-todos", "755"],
    ["enative-todos.desktop", "usr/share/applications/", "644"],
]
