[package]
name = "websocket"
version = "1.0.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2024"
publish = false

[dependencies]
enative.workspace = true
enative.features = ["debug", "tokio", "sipper"]

warp = "0.3"

[dependencies.async-tungstenite]
version = "0.25"
features = ["tokio-rustls-webpki-roots"]

[dependencies.tokio]
workspace = true
features = ["time"]
